--- a/layouts/partials/contact.html
+++ b/layouts/partials/contact.html
@@ -15,7 +15,7 @@
       <div class="divider is-centered"></div>
     </div>
 
-    <div class="content-wrapper">
+    <div class="content-wrapper" style="overflow: hidden;">
       <div class="columns">
         <div class="column is-6 is-offset-3">
           <form{{ with $action }} action="{{ . }}"{{end}}{{ with $method }} method="{{ . }}"{{end}}>
