--- a/layouts/partials/testimonials.html
+++ b/layouts/partials/testimonials.html
@@ -12,7 +12,7 @@
       {{- end }}
     </div>
 
-    <div class="content-wrapper">
+    <div class="content-wrapper" style="overflow: hidden;">
       <div class="columns is-vcentered">
         {{- range $clients }}
         <div class="column is-4">
