Update contact form

--- a/themes/cns/layouts/contact/list.html
+++ b/themes/cns/layouts/contact/list.html
@@ -21,6 +21,7 @@
                   name="first_name"
                   class="form-input"
                   placeholder="John"
+                  required="true"
                   type="text" />
               </div>
               <div class="col-6 mb-6">
