--- a/themes/cns/layouts/contact/list.html
+++ b/themes/cns/layouts/contact/list.html
@@ -20,8 +20,8 @@
                   id="first_name"
                   name="first_name"
                   class="form-input"
-                  placeholder="John"
                   required="true"
+                  placeholder="John"
                   type="text" />
               </div>
               <div class="col-6 mb-6">
@@ -32,6 +32,7 @@
                   id="last_name"
                   name="last_name"
                   class="form-input"
+                  required="true"
                   placeholder="Doe"
                   type="text" />
               </div>
@@ -45,12 +46,13 @@
                   id="email"
                   name="email"
                   class="form-input"
+                  required="true"
                   placeholder="john.doe@email.com"
                   type="email" />
               </div>
               <div class="col-6 mb-6">
                 <label for="company" class="form-label">
-                  Company <span class="text-red-500">*</span>
+                  Company
                 </label>
                 <input
                   id="company"
@@ -68,6 +70,7 @@
                 id="message"
                 name="message"
                 class="form-input"
+                required="true"
                 placeholder="Message goes here..."
                 rows="8"></textarea>
             </div>
