--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -32,6 +32,11 @@
     filter: grayscale(100%);
 }
 
+.our-expertise {
+    background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
+    margin-top: 1rem;
+}
+
 .img-shadow {
     filter: drop-shadow(2px 4px 11px theme('colors.secondary'));
     animation: upDownAnimation 3s ease infinite;
@@ -49,35 +54,20 @@
     }
 }
 
-// Cards
-.card-container {
-    width: calc(33.333% - 10px);
+.row{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    padding: 10px 53px;
 }
 
 .card-main {
     -webkit-transition: all ease-in-out 0.5s;
-    /* WebKit-based browsers */
     transition: all ease-in-out 0.3s;
 }
 
-
-.card-main:hover {
+.card-main:hover{
     transform: scale(1.1);
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.774);
-}
-
-:is(.dark .card-main:hover) {
-    box-shadow: 0px 1px 3px rgba(255, 251, 251, 0.952);
-}
-
-@media (max-width: 992px) {
-    .card-container {
-        width: 50%;
-    }
-}
-
-@media (max-width: 600px) {
-    .card-container {
-        width: 100%;
-    }
 }
