--- a/themes/cns/layouts/partials/components/service-card.html
+++ b/themes/cns/layouts/partials/components/service-card.html
@@ -1,13 +1,14 @@
-<div
-  class="card card-main bg-theme-light dark:bg-darkmode-theme-light rounded-lg p-4 h-100" id="cards-hov">
-  {{ $image:= .Params.image }}
+{{/* nothing changed   */}}
+
+<div class="bg-theme-light dark:bg-darkmode-theme-light rounded-lg p-4 text-center card card-main">
+  {{ $image := .Params.image }}
   {{ if $image }}
     {{ partial "image" (dict "Src" $image "Alt" .Title "Class" "rounded-full" "size" "100x100") }}
   {{ end }}
-  <h4 class="mb-4">
-    <a href="{{ .RelPermalink }}">{{ .Title }}</a>
+  <h4 class="mt-4">
+    <a href="{{ .RelPermalink }}" class="text-lg md:text-xl lg:text-2xl">{{ .Title }}</a>
   </h4>
-  <p class="mb-4">
+  <p class="mb-4 text-sm md:text-base lg:text-lg">
     {{ .Summary }}
   </p>
 </div>
